--- a/helm/linkerd2-app/values.yaml
+++ b/helm/linkerd2-app/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 # -- Kubernetes DNS Domain name to use
-clusterDomain: cluster.local
+clusterDomain: &cluster_domain cluster.local
 
 # -- Registry switch
 # Do not overwrite this as it is automatically set based on the installation region
@@ -31,7 +31,7 @@ linkerdVersion: stable-2.12.1
 # -- default kubernetes deployment strategy
 deploymentStrategy:
   rollingUpdate:
-    maxUnavailable: 25%
+    maxUnavailable: 1
     maxSurge: 25%
 # -- enables the use of EndpointSlice informers for the destination service;
 # enableEndpointSlices should be set to true only if EndpointSlice K8s feature
@@ -43,7 +43,7 @@ enablePodAntiAffinity: true
 # servers
 enablePprof: false
 # -- enables the creation of pod disruption budgets for control plane components
-enablePodDisruptionBudget: false
+enablePodDisruptionBudget: true
 # -- enabling this omits the NET_ADMIN capability in the PSP
 # and the proxy-init container when injecting the proxy;
 # requires the linkerd-cni plugin to already be installed
@@ -52,7 +52,7 @@ cniEnabled: true
 identityTrustAnchorsPEM: |
 # -- Trust domain used for identity
 # @default -- clusterDomain
-identityTrustDomain: ""
+identityTrustDomain: *cluster_domain
 # -- Additional annotations to add to all pods
 podAnnotations: {}
 # -- Additional labels to add to all pods
@@ -249,7 +249,7 @@ enableH2Upgrade: true
 enablePSP: true
 
 # -- Failure policy for the proxy injector
-webhookFailurePolicy: Ignore
+webhookFailurePolicy: Fail
 
 # controllerImage -- Docker image for the destination and identity components
 controllerImage: giantswarm/linkerd2-controller
@@ -257,12 +257,21 @@ controllerImage: giantswarm/linkerd2-controller
 controllerReplicas: 3
 # -- User ID for the control plane components
 controllerUID: 2103
+# -- Resource limits for controller
+controllerResources: &controller_resources
+  cpu: &controller_resources_cpu
+    limit: ""
+    request: 100m
+  memory:
+    limit: 250Mi
+    request: 50Mi
 
 # destination configuration
 # set resources for the sp-validator and its linkerd proxy respectively
 # see proxy.resources for details.
 # destinationResources -- CPU, Memory and Ephemeral Storage resources required by destination (see `proxy.resources` for sub-fields)
-# destinationResources:
+destinationResources: *controller_resources
+
 # destinationProxyResources -- CPU, Memory and Ephemeral Storage resources required by proxy
 # injected into destination pod (see `proxy.resources` for sub-fields)
 # destinationProxyResources:
@@ -305,7 +314,11 @@ identity:
 
 
 # -|- CPU, Memory and Ephemeral Storage resources required by the identity controller (see `proxy.resources` for sub-fields)
-# identityResources:
+identityResources:
+  cpu: *controller_resources_cpu
+  memory:
+    limit: 250Mi
+    request: 10Mi
 # -|- CPU, Memory and Ephemeral Storage resources required by proxy injected into identity pod (see `proxy.resources` for sub-fields)
 # identityProxyResources:
 
@@ -314,6 +327,7 @@ identity:
 disableHeartBeat: false
 # -- Config for the heartbeat cronjob
 # heartbeatSchedule: "0 0 * * *"
+heartbeatResources: *controller_resources
 
 # proxy injector configuration
 proxyInjector:
@@ -375,7 +389,7 @@ proxyInjector:
 
 # -|- CPU, Memory and Ephemeral Storage resources required by the proxy injector (see
 # `proxy.resources` for sub-fields)
-# proxyInjectorResources:
+proxyInjectorResources: *controller_resources
 # -|- CPU, Memory and Ephemeral Storage resources required by proxy injected into the proxy injector
 # pod (see `proxy.resources` for sub-fields)
 # proxyInjectorProxyResources:
@@ -478,7 +492,7 @@ nodeSelector:
 
 # -|- CPU, Memory and Ephemeral Storage resources required by the SP validator (see
 # `proxy.resources` for sub-fields)
-# spValidatorResources:
+spValidatorResources: *controller_resources
 
 # -|- Tolerations section, See the
 # [K8S documentation](https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/)
